--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-algonaut = { git = "https://github.com/manuelmauro/algonaut" }
+algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main" }
